--- a/css/main.css
+++ b/css/main.css
@@ -535,7 +535,7 @@ button:active{
     margin-bottom: 30px;
   }
   .slick-arrow{
-    display: none;
+    display: none !important;
     width: 0;
     height: 0;
     background: none;
